# openssl

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.bii.md  README.md  appveyor.yml  biicode.conf  biicodizer.bat  biicodizer.sh  configure.cmake  e_os.h  ignore.bii  main.cpp
crypto/: CMakeLists.txt
ssl/: CMakeLists.txt
